templates/kyso-front_template.yaml
---
# Source: kyso-front/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kyso-front
  labels:
    helm.sh/chart: kyso-front-1.0.0
    app.kubernetes.io/name: kyso-front
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kyso-front
    app.kubernetes.io/instance: release-name
---
# Source: kyso-front/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kyso-front
  labels:
    helm.sh/chart: kyso-front-1.0.0
    app.kubernetes.io/name: kyso-front
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kyso-front
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kyso-front
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: kyso-front
          securityContext:
            {}
          image: "kyso/kyso-front:"
          imagePullPolicy: IfNotPresent
          ports:
            - name: kyso-front-http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: kyso-front-http
          readinessProbe:
            httpGet:
              path: /
              port: kyso-front-http
          resources:
            {}
---
# Source: kyso-front/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-kyso-front
  labels:
    helm.sh/chart: kyso-front-1.0.0
    app.kubernetes.io/name: kyso-front
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
---
# Source: kyso-front/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-kyso-front-test-connection"
  labels:
    helm.sh/chart: kyso-front-1.0.0
    app.kubernetes.io/name: kyso-front
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-kyso-front:80/']
  restartPolicy: Never
